--- a/.gitignore
+++ b/.gitignore
@@ -1,22 +1,29 @@
-# Compiled class file
-*.class
+# Untracked files:
 
-# Log file
+.DS_Store
+target
+classes
+database
+*.bak
 *.log
-
-# BlueJ files
-*.ctxt
-
-# Mobile Tools for Java (J2ME)
-.mtj.tmp/
-
-# Package Files #
-*.jar
-*.war
-*.ear
-*.zip
-*.tar.gz
-*.rar
-
-# virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
-hs_err_pid*
+.classpath
+.project
+.settings
+.idea
+.mymetadata
+*.class
+*.iml
+*.iws
+*.ipr
+bin
+etc
+logs
+activemq-data
+tomcat
+lib
+libs
+dependencies
+lib-2.6.7
+war/yellowpages
+*.doc
+*.docx
