--- a/pom.xml
+++ b/pom.xml
@@ -44,7 +44,7 @@
 	<description>Spring Integration for Java Content Repository</description>
 	
 	<!-- Project Version -->
-	<version>0.0.1-SNAPSHOT</version>
+	<version>0.0.1</version>
 	
 	<!-- Packaging -->
 	<packaging>jar</packaging>
@@ -453,7 +453,7 @@
 										</goals>
 									</pluginExecutionFilter>
 									<action>
-										<ignore></ignore>
+										<ignore />
 									</action>
 								</pluginExecution>
 							</pluginExecutions>
