[maven-release-plugin] prepare release spring-jcr-jackrabbit-1.0.2

--- a/pom.xml
+++ b/pom.xml
@@ -44,7 +44,7 @@
 	<description>Spring Integration for Java Content Repository</description>
 	
 	<!-- Project Version -->
-	<version>1.0.2-SNAPSHOT</version>
+	<version>1.0.2</version>
 	
 	<!-- Packaging -->
 	<packaging>jar</packaging>
